@@ -22,6 +22,7 @@ K  6804	IdleManager can deadlock with frequent notifications
 K  6817	IdleManager can deadlock when connection fails
 K  6824	IMAP provider should support the MOVE extension (RFC 6851)
 K  6840	MODSEQ should be stored in IMAPMessage if CONDSTORE is enabled
+K  6844	Space character lost from end of quoted-printable body parts
 
 
 		  CHANGES IN THE 1.5.3 RELEASE
